--- a/Week-4/crudOperation/.env
+++ b/Week-4/crudOperation/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://lukhidixit149:93281dixit@cluster0.38wpt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_API=mongodb+srv://lukhidixit149:93281dixit@cluster0.38wpt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
