--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,27 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-*.env
-# Test binary, built with `go test -c`
+# Go binary files
+/bin/
+/build/
+/out/
+
+# Go module cache
+/go/pkg/mod/
+
+# Go build output
+*.a
+*.out
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Dependency directories
+vendor/
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# IDE and editor files
+*.idea/
+*.vscode/
+*.swp
 
-# Go workspace file
-go.work
-go.work.sum
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Environment files
+.env
